--- a/Index.html
+++ b/Index.html
@@ -139,15 +139,15 @@
     </div>
 </div>
     </header>
-
+    <!-- Main Content -->
     <main>
-      <!-- Project Card Container -->
-        <div class="container">
+      <!-- Projects Section -->
+      <div class="container">
             <div id="projects">
               <h2>Your Projects</h2>
               <ul>
-
-                <li class="project card">
+                  <!-- Project Action Buttons -->
+                  <li class="project card">
                 <div class="content">
                     <h3 class="title">Super Cool Project</h3>
                     <p>
@@ -290,8 +290,8 @@
               </div>
 
               <aside>
-<!-- Announcements Row -->                
-                <div id="announcements">
+            <!-- Announcements Sidebar -->
+            <div id="announcements">
                     <h2>Announcements</h2>
                     <ul class="card">
                         <li>
@@ -324,12 +324,12 @@
 
                   </ul>
                 </div>
-<!-- Trending Row -->
-
+              <!-- Trending Section -->
                 <div id="trending">
                 <h2>Trending</h2>
                 <ul class="card">
 
+                  <!-- Trending profile items -->
                     <li class="profile">
                         <img
                           src="Assests/Images/pfp002.svg"
